force-app/main/default/objects/OpportunityLineItem/fields/Override_Attainments__c.field-meta.xml
<CustomField>
    <fullName>Override_Attainments__c</fullName>
    <formula>Opportunity.Override_Attainments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Override Attainments</label>
    <type>Checkbox</type>
</CustomField>