force-app/main/default/objects/OpportunityLineItem/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <formula>Opportunity.Partner__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner</label>
    <type>Text</type>
</CustomField>