force-app/main/default/objects/OpportunityLineItem/fields/Partner_Margin_Attributable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Partner_Margin_Attributable_Amount__c</fullName>
    <label>Partner Margin - Attributable Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>