force-app/main/default/objects/OpportunityLineItem/fields/Partner_Payment_OP_Bill_through__c.field-meta.xml
<CustomField>
    <fullName>Partner_Payment_OP_Bill_through__c</fullName>
    <label>Partner Payment % (Opp Product - BtP)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>