force-app/main/default/objects/OpportunityLineItem/fields/Partner_Payment_OP_Direct__c.field-meta.xml
<CustomField>
    <fullName>Partner_Payment_OP_Direct__c</fullName>
    <formula>Partner_Margin_Attributable_Amount__c * Partner_Payment_Opp_Product_Direct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Payment (Opp Product - Direct)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>