force-app/main/default/objects/OpportunityLineItem/fields/Partner_Payment_Opp_Product__c.field-meta.xml
<CustomField>
    <fullName>Partner_Payment_Opp_Product__c</fullName>
    <formula>IF( Partner_Payment_OP_Bill_through__c &gt; 0, Partner_Payment_OP_Bill_through__c , IF( Partner_Payment_Opp_Product_Direct__c &gt; 0 , Partner_Payment_Opp_Product_Direct__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Payment % (Opp Product)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>