force-app/main/default/objects/OpportunityLineItem/fields/Partner_Payment_Opp_Product_Bill_thro__c.field-meta.xml
<CustomField>
    <fullName>Partner_Payment_Opp_Product_Bill_thro__c</fullName>
    <formula>IF (  Partner_Payment_OP_Bill_through__c = 0, 0, 

(  TotalPrice  * (1 / (1 -  Partner_Payment_Opp_Product__c)) -  TotalPrice ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Payment (Opp Product - BtP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>