force-app/main/default/objects/OpportunityLineItem/fields/Partner_Payment_Opp_Product_Direct__c.field-meta.xml
<CustomField>
    <fullName>Partner_Payment_Opp_Product_Direct__c</fullName>
    <label>Partner Payment % (Opp Product - Direct)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>