force-app/main/default/objects/OpportunityLineItem/fields/Partner_Payment_OppProduct__c.field-meta.xml
<CustomField>
    <fullName>Partner_Payment_OppProduct__c</fullName>
    <formula>IF( Partner_Payment_Opp_Product_Bill_thro__c &gt; 0, Partner_Payment_Opp_Product_Bill_thro__c , IF( Partner_Payment_OP_Direct__c &gt; 0 , Partner_Payment_OP_Direct__c , 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Payment (Opp Product)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>