force-app/main/default/objects/OpportunityLineItem/fields/Perpetual_Open_Total__c.field-meta.xml
<CustomField>
    <fullName>Perpetual_Open_Total__c</fullName>
    <formula>IF(Opportunity.IsClosed &lt;&gt; True,  Opportunity.AM_Perpetual_Attainment__c , 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perpetual Open Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>