force-app/main/default/objects/OpportunityLineItem/fields/Perpetual_Type__c.field-meta.xml
<CustomField>
    <fullName>Perpetual_Type__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Perpetual_Type__c)</formula>
    <label>Perpetual Type</label>
    <type>Text</type>
</CustomField>