force-app/main/default/objects/OpportunityLineItem/fields/PriceOpen__c.field-meta.xml
<CustomField>
    <fullName>PriceOpen__c</fullName>
    <formula>if (Opportunity.IsClosed= (false) ,   TotalPrice  ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PriceOpen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>