force-app/main/default/objects/OpportunityLineItem/fields/PriceWon__c.field-meta.xml
<CustomField>
    <fullName>PriceWon__c</fullName>
    <formula>if  (ISPICKVAL(Opportunity.StageName,&apos;Closed Won&apos;), TotalPrice    ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PriceWon</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>