force-app/main/default/objects/OpportunityLineItem/fields/Product_Discount_Amount_MFC__c.field-meta.xml
<CustomField>
    <fullName>Product_Discount_Amount_MFC__c</fullName>
    <formula>UnitPrice  *   Customer_Discount__c *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount (Opp Product)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>