force-app/main/default/objects/OpportunityLineItem/fields/Product_Family_2__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_2__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Management</fullName>
            </value>
            <value>
                <fullName>Other Ops</fullName>
            </value>
            <value>
                <fullName>Integrations/Connectors</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>