force-app/main/default/objects/OpportunityLineItem/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>HT - Sercante - 04/01/2021 - mirrors the pick list values for product family on the product record.  Populated by workflow rule, supports reporting.</description>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLOUD_PRODUCTS</fullName>
            </value>
            <value>
                <fullName>CUSTOM</fullName>
            </value>
            <value>
                <fullName>DEPOSIT</fullName>
            </value>
            <value>
                <fullName>DESKTOP_ENHANCEMENT</fullName>
            </value>
            <value>
                <fullName>DESKTOP_PRODUCTS</fullName>
            </value>
            <value>
                <fullName>DESKTOP_SPLA</fullName>
            </value>
            <value>
                <fullName>DESKTOP_SUBSCRIPTION</fullName>
            </value>
            <value>
                <fullName>DISTRIBUTION_CLOUD</fullName>
            </value>
            <value>
                <fullName>INTELLIGENCE</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>REIMBURSEMENT</fullName>
            </value>
            <value>
                <fullName>SALESPAD_SUBSCRIPTION</fullName>
            </value>
            <value>
                <fullName>SERVICE_AGREEMENTS</fullName>
            </value>
            <value>
                <fullName>SERVICES</fullName>
            </value>
            <value>
                <fullName>ANALYTICS CLOUD</fullName>
            </value>
            <value>
                <fullName>PERPETUAL_DISCOUNT</fullName>
            </value>
            <value>
                <fullName>SUBSCRIPTION_DISCOUNT</fullName>
            </value>
            <value>
                <fullName>CAVALLO_FOR_BC</fullName>
            </value>
            <value>
                <fullName>Order Management</fullName>
            </value>
            <value>
                <fullName>Other Ops</fullName>
            </value>
            <value>
                <fullName>Integrations/Connectors</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>BC</fullName>
            </value>
            <value>
                <fullName>Add-on</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>