force-app/main/default/objects/OpportunityLineItem/fields/Pyramid__c.field-meta.xml
<CustomField>
    <fullName>Pyramid__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Pyramid__c)</formula>
    <label>Pyramid</label>
    <type>Text</type>
</CustomField>