force-app/main/default/objects/OpportunityLineItem/fields/Quantity_ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>Quantity_ReadOnly__c</fullName>
    <formula>Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>