force-app/main/default/objects/OpportunityLineItem/fields/Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Revenue__c</fullName>
    <formula>PricebookEntry.Product2.Recurring_Revenue__c</formula>
    <label>Recurring Revenue</label>
    <type>Checkbox</type>
</CustomField>