force-app/main/default/objects/OpportunityLineItem/fields/Sales_ARR_MFC__c.field-meta.xml
<CustomField>
    <fullName>Sales_ARR_MFC__c</fullName>
    <formula>IF(TotalPrice = 0,0,Sales_Gross_ARR__c)</formula>
    <label>Gross ARR (Opp Product)_formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>