force-app/main/default/objects/OpportunityLineItem/fields/Sales_Gross_ARR__c.field-meta.xml
<CustomField>
    <fullName>Sales_Gross_ARR__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Gross ARR (Opp Product)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>