force-app/main/default/objects/OpportunityLineItem/fields/Sub_Products_Excluding_3_Products__c.field-meta.xml
<CustomField>
    <fullName>Sub_Products_Excluding_3_Products__c</fullName>
    <formula>IF( PricebookEntry.Product2.Sub_Exception_Products__c &lt;&gt; True  &amp;&amp;  (TEXT(Product_Family__c)  = &apos;SALESPAD_SUBSCRIPTION&apos;||TEXT(Product_Family__c)  = &apos;DESKTOP_SUBSCRIPTION&apos;),  List_Price_Total__c , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Products Excluding 3 Products</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>