force-app/main/default/objects/OpportunityLineItem/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <formula>TEXT(Opportunity.Subtype__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Type</label>
    <type>Text</type>
</CustomField>