force-app/main/default/objects/OpportunityLineItem/fields/Subscription_Old_List_Price_Total__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Old_List_Price_Total__c</fullName>
    <formula>IF( TotalPrice &gt;  Old_list_Price__c  || TotalPrice =0.00, TotalPrice , Old_list_Price__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Old List Price Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>