force-app/main/default/objects/OpportunityLineItem/fields/Subscription_Open_Total__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Open_Total__c</fullName>
    <formula>IF(Opportunity.IsClosed &lt;&gt; True  ,   Opportunity.AM_Subscription_Attainment_V2__c , 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Open Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>