force-app/main/default/objects/OpportunityLineItem/fields/Subscription_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Product_Type__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Subscription_Product_Type2__c)</formula>
    <label>Subscription Product Type</label>
    <type>Text</type>
</CustomField>