force-app/main/default/objects/OpportunityLineItem/fields/Subscription_Total__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Total__c</fullName>
    <formula>IF( TotalPrice &gt; List_Price_Total__c ||  TotalPrice =0.00,  TotalPrice ,  List_Price_Total__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription List Price Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>