force-app/main/default/objects/OpportunityLineItem/fields/test_CAM__c.field-meta.xml
<CustomField>
    <fullName>test_CAM__c</fullName>
    <formula>IF( CAM_Quota_Attainment_Override__c = true, TotalPrice , Subscription_exception_Products__c + Sub_Products_Excluding_3_Products__c + Software_Products_Excluding_Subscription__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAM Quota Attainment.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>