force-app/main/default/objects/OpportunityLineItem/fields/Total_Sales_Price_MFC__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Price_MFC__c</fullName>
    <formula>UnitPrice  *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sales Price_MFC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>