force-app/main/default/objects/OpportunityLineItem/fields/Work_Description__c.field-meta.xml
<CustomField>
    <fullName>Work_Description__c</fullName>
    <inlineHelpText>Description field to be used for custom Statement of Work</inlineHelpText>
    <label>Work Description</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>