force-app/main/default/objects/OpportunityLineItem/validationRules/ia_crm__Amount_cannot_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>ia_crm__Amount_cannot_be_empty</fullName>
    <active>false</active>
    <description>Flat/Fixed amount(Amount__c) cannot be empty if billing method is Fixed price.</description>
    <errorConditionFormula>IF(AND(ISPICKVAL(ia_crm__Billing_Method__c, &apos;Fixed price&apos;), Opportunity.RecordType.DeveloperName = &apos;Contract&apos; ), ISBLANK(ia_crm__Amount__c), false)</errorConditionFormula>
    <errorMessage>Flat/Fixed amount cannot be empty if billing method is Fixed price.</errorMessage>
</ValidationRule>