force-app/main/default/objects/OpportunityLineItem/validationRules/ia_crm__Quantity_Rate_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>ia_crm__Quantity_Rate_Required</fullName>
    <active>false</active>
    <description>If Rate, Quantity or Multiplier, then both Rate and Quantity need to be filled in.</description>
    <errorConditionFormula>IF(Opportunity.RecordType.DeveloperName = &apos;Contract&apos;,
AND(OR(NOT(ISBLANK(UnitPrice)), NOT(ISBLANK(Quantity)), NOT(ISBLANK( ia_crm__Multiplier__c ))), OR(ISBLANK(UnitPrice), ISBLANK(Quantity))), false)</errorConditionFormula>
    <errorMessage>Incomplete input data is provided for &apos;Rate&apos;, &apos;Quantity&apos;, and &apos;Multiplier&apos;.</errorMessage>
</ValidationRule>